初期環境構築 > 動作確認まで。

--- a/docs/99_環境/10_環境構築方法.md
+++ b/docs/99_環境/10_環境構築方法.md
@@ -9,24 +9,132 @@ https://github.com/NashiiTaka/oka-sapo
 git clone git@github.com:NashiiTaka/oka-sapo.git
 ```
 
+## yamlファイルの修正
+```
+# seleniumはCPUによって記述を分けないと起動に失敗しました。
+
+# Win(Intel等CPU)の場合
+selenium:
+        image: selenium/standalone-chrome
+
+# Mac(M1〜 / Appleシリコン)の場合
+selenium:
+        image: seleniarm/standalone-chromium
+```
+
 ## ディレクトリ構成の説明
 ```
 ├── docs      # ドキュメント類を配置
+├── gpts      # チャットGPT関連ファイルを保持
 ├── laravel   # Laravelファイル群
-├── node      # Node.jsファイル群
 └── sql       # 共有したいSQL
 ```
 
-## Dockerを立ち上げる
+## 環境変数の修正
+```
+# sailのエイリアスが設定されていない場合のみ
+vim ~/.zshrc
+# 以下の行を追記
+alias sail='bash vendor/bin/sail'
+# php へのパスが設定されていない場合、以下の行を追記
+export PATH="/Applications/XAMPP/xamppfiles/bin:$PATH"
+
+# 修正内容を反映する。
+source ~/.zshrc
+```
+
+## DockerとLaravelの起動に必要なライブラリをインストールする
 ```
 # Laravelのプロジェクトフォルダに移動
 cd laravel
-# 立ち上げる。
-sail up
+# Composerをインストール
+curl -sS https://getcomposer.org/installer | php
+# PHPライブラリをインストール
+php composer.phar install
+# Node.jsライブラリをインストール
+npm install
+```
+
+## 環境設定ファイルを準備する
+```
+cp .env.example .env
+```
+一番下の行の、OPENAIのキーを設定する。  
+OPENAI_API_KEY=''
+
+事前に .env.examplle は下記の条件が満たされていることが必要。
+1. コミットしても安全な情報のみが記述されている。
+2. 開発環境(ローカル)での動作環境が記述されている。
+3. リモートレポジトリにコミットされている。
+
+## VSCode 拡張機能のインストール
+```
+# Blade関連
+Laravel Blade formatter
+Laravel Blade Snippets
+# .key ファイルなどが開けるようになります。
+Open
+# デバッグ用
+PHP Debug
+```
+
+## bladeフォーマッタの設定
+設定画面を開き(⌘ + ,)
+Blade Formatter Indent Size
+で検索。
+タブサイズを2に変更する。
+
+## PHPデバッグ環境のセットアップ
+```
+laravelフォルダ内の任意のphpファイルを開く
+虫さんのデバッグメニューから、
+launch.jsonファイルの作成を選ぶ
+設定名："name": "Listen for Xdebug",
+の末尾に、以下を追記する。
+
+●追記する内容
+            "stopOnEntry": false,
+            "pathMappings": {
+                "/var/www/html": "${workspaceRoot}"
+            }
+
+●設定全体はこちら
+    "configurations": [
+        {
+            "name": "Listen for Xdebug",
+            "type": "php",
+            "request": "launch",
+            "port": 9003,
+            "stopOnEntry": false,
+            "pathMappings": {
+                "/var/www/html": "${workspaceFolder}"
+            },
+        },
+        ...
+    ]
+```
+
+## Docker/Laravelと、Tailwind実行を立ち上げる ※実行しっぱなしになるので、そのままにしておく①
+```
+npm run dev
+```
+
+## 接続テスト
+```
+# 実行状況を確認する。
+open http://localhost/
+# phpMyAdminへの接続
+open http://localhost/
 ```
 
 ## データベースのマイグレーション(データベーステーブルの作成)の実施
 ```
 # 以下のコマンドを実行すると、テーブル郡が作成され、初期データが投入されます。
 sail artisan migrate:refresh --seed
+```
+
+## 終了方法
+```
+# ①のプロセスをcontrol + cで終了させる。その後、Dockerを終了させる
+sail down
 ```
