・JSデバッグ設定を追記 ・商品、メーカー、ブランド、カテゴリのテーブルを追加 ・商品関連情報のシードデータを追加、及びその生成ロジックを追加

--- a/docs/99_環境/10_環境構築方法.md
+++ b/docs/99_環境/10_環境構築方法.md
@@ -20,6 +20,20 @@ selenium:
 # Mac(M1〜 / Appleシリコン)の場合
 selenium:
         image: seleniarm/standalone-chromium
+
+# phpMyAdminの追記
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        links:
+            - mysql:mysql
+        ports:
+            - 8080:80
+        environment:
+            #PMA_USER: "${DB_USERNAME}"
+            #PMA_PASSWORD: "${DB_PASSWORD}"
+            PMA_HOST: mysql
+        networks:
+            - sail
 ```
 
 ## ディレクトリ構成の説明
@@ -41,12 +55,15 @@ export PATH="/Applications/XAMPP/xamppfiles/bin:$PATH"
 
 # 修正内容を反映する。
 source ~/.zshrc
+
+# phpのバージョンを確認する。Laravel11にはphp8.2以降が必要。8.1以前の場合は、インストール & そちらへのPATH通しが必要
+php -v
 ```
 
 ## DockerとLaravelの起動に必要なライブラリをインストールする
 ```
 # Laravelのプロジェクトフォルダに移動
-cd laravel
+cd [Laravelのプロジェクトルートフォルダ]
 # Composerをインストール
 curl -sS https://getcomposer.org/installer | php
 # PHPライブラリをインストール
@@ -67,7 +84,7 @@ OPENAI_API_KEY=''
 2. 開発環境(ローカル)での動作環境が記述されている。
 3. リモートレポジトリにコミットされている。
 
-## VSCode 拡張機能のインストール
+## VSCode 拡張機能のインストール(任意)
 ```
 # Blade関連
 Laravel Blade formatter
@@ -78,13 +95,13 @@ Open
 PHP Debug
 ```
 
-## bladeフォーマッタの設定
+## bladeフォーマッタの設定(任意、4タブだと横に行き過ぎるので)
 設定画面を開き(⌘ + ,)
 Blade Formatter Indent Size
 で検索。
 タブサイズを2に変更する。
 
-## PHPデバッグ環境のセットアップ
+## PHPデバッグ環境のセットアップ(任意)
 ```
 laravelフォルダ内の任意のphpファイルを開く
 虫さんのデバッグメニューから、
@@ -114,27 +131,46 @@ launch.jsonファイルの作成を選ぶ
     ]
 ```
 
-## Docker/Laravelと、Tailwind実行を立ち上げる ※実行しっぱなしになるので、そのままにしておく①
+## Tailwind用のnpm run devとsail upを毎回記述するのが面倒な場合、npm run devで両方起動できるようにする。(任意)
+```
+# package.json
+- "dev": "vite",
++ "dev": "vendor/bin/sail up -d && vite",
+```
+
+
+## Docker/Laravelと、Tailwind実行を立ち上げる ※実行しっぱなしになるので、そのままにしておく①(任意)
 ```
 npm run dev
 ```
 
-## 接続テスト
-```
-# 実行状況を確認する。
-open http://localhost/
-# phpMyAdminへの接続
-open http://localhost/
-```
-
-## データベースのマイグレーション(データベーステーブルの作成)の実施
+## データベースのマイグレーション(データベーステーブルの作成)と初期データ登録の実施(任意)
 ```
 # 以下のコマンドを実行すると、テーブル郡が作成され、初期データが投入されます。
 sail artisan migrate:refresh --seed
 ```
 
-## 終了方法
+## 接続テスト(任意)
 ```
-# ①のプロセスをcontrol + cで終了させる。その後、Dockerを終了させる
+# 実行状況を確認する。
+open http://localhost/
+# phpMyAdminへの接続
+open http://localhost:8080/
+```
+
+## 終了方法(任意)
+```
+# ①のプロセスをcontrol + cで終了させる。その後、下記のコマンドを実行してDockerを終了させる
 sail down
+```
+
+## よくあるトラブルシューティング
+```
+sail up(npm run dev)を実行すると、下記のメッセージが出てDockerが起動しない。
+Dockerのアプリケーションは実行されている。
+Docker is not running.
+  
+Dockerのアプリが起動していてもフリーズ(もしくは機能不全)になっていることがよくあります。
+Dockerのアプリを終了(メニュー > Quit Docker Desktop)したあとに、立ち上げ直してください。
+その後sail upすると動作します。(数例、同じ現象を確認しました)
 ```
