楽天商品を追加

--- a/docs/99_環境/10_環境構築方法.md
+++ b/docs/99_環境/10_環境構築方法.md
@@ -174,3 +174,6 @@ Dockerのアプリが起動していてもフリーズ(もしくは機能不全)
 Dockerのアプリを終了(メニュー > Quit Docker Desktop)したあとに、立ち上げ直してください。
 その後sail upすると動作します。(数例、同じ現象を確認しました)
 ```
+
+# pythonインストール
+pip install beautifulsoup4 lxml html5lib
