--- a/laravel/util/データ作成手順.md
+++ b/laravel/util/データ作成手順.md
@@ -1,4 +1,9 @@
-## CurrentDirectoryをlaravelにして、以下のコマンドを実行する。
+## CurrentDirectoryをlaravelにする。
+
+### 色データの作成手順
 node util/tproducts_converter.mjs
 python3 util/get_valiation_imgs.py
 python3 util/get_rgb_from_imgs.py
+
+### 楽天商品データの作成手順
+node "util/【楽天API】商品検索_all.js"
